--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,7 +3,9 @@ services:
     # build: 
     #   context: . 
     #   dockerfile: Dockerfile 
-    image: gsrthegreat/cookit-api:latest
+    build: 
+      context: .
+      dockerfile: ./Dockerfile
     ports: 
       - "8080:8080" 
     environment: 
@@ -28,7 +30,7 @@ services:
       - MYSQL_PASSWORD=apppassword 
     volumes: 
       - mariadb-data:/var/lib/mysql 
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./internal/database/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks: 
       - app-network 
     healthcheck: 
